src/test/ui/maybe-bounds.stderr
error: `?Trait` is not permitted in supertraits
  --> $DIR/maybe-bounds.rs:1:11
   |
LL | trait Tr: ?Sized {}
   |           ^^^^^^
   |
   = note: traits are `?Sized` by default

error: aborting due to previous error

